infra/network-policy/overlays/cluster-b/allow-test-client-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-test-client-to-nginx
  namespace: default

spec:
  podSelector:
    matchLabels:
      app: nginx
      
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test-client
      ports:
        - protocol: TCP
          port: 80
